# thimbleLang

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SPEC.md  build.py  wrangler.jsonc
.github/workflows/: ci.yml  fuzz.yml
benchmarks/: runtime_benchmark.cpp
cmake/: ThimbleConfig.cmake.in
docs/: ARCHITECTURE.md
examples/: README.md  geometry.thimble  geometry_runtime.cpp  policy_runtime.cpp
include/thimble/: ast.hpp  error.hpp  host.hpp  lexer.hpp  parser.hpp  runtime.hpp  thimble.hpp  value.hpp  version.hpp
include/thimble/detail/: collections_objects.inl  compiler.hpp  evaluator.inl  execution.inl  runner_control.inl  runtime_support.hpp
site/: examples.html  index.html  language.html  styles.css
tests/: amalgamated.cpp  parser_fuzz_smoke.cpp  parser_fuzzer.cpp  smoke.cpp  test_diagnostics.cpp  test_host_boundaries.cpp  test_language.cpp  test_limits_and_cycles.cpp  test_support.hpp
tests/install_consumer/: CMakeLists.txt  main.cpp
tools/: amalgamate.py  package_release.py  validate_release.py
